Started messing around with classes, added TAFFY DB wrapper idea ... not sure yet

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,11 @@
   <title></title>
 </head>
 <body>
-<h1>meeeeeeeoooo</h1>
+  <h1>mnooooo</h1>
+  
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="libs/taffydb/taffy.js"></script>
+  <script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
