added quick helper functions for the book module

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <h1>mnooooo</h1>
+
+  <div id="panel1"></div>
+
+  <div id="panel2"></div>
   
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="libs/taffydb/taffy.js"></script>
