--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script type="text/javascript" src="libs/taffydb/taffy.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </head>
 <body ng-app="webApp">
   <div ng-controller="AppController">
@@ -17,20 +22,14 @@
         <a href="#/{{selectedBookId}}/{{chapterId}}" ng-click="setChapterId(chapterId)">{{chapterId}}</a>
       </div>
       <div ng-repeat="verse in bookOneVerses">
-        {{verse.text}} 
+        <sup>{{verse.verseId}}</sup>{{verse.text}} 
       </div>
       <hr />
       <div ng-repeat="verse in bookTwoVerses">
-        {{verse.text}} 
+        <sup>{{verse.verseId}}</sup>{{verse.text}} 
       </div>
-
     </div>
   </div>
   
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script type="text/javascript" src="libs/taffydb/taffy.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-  <script type="text/javascript" src="app.js"></script>
-
 </body>
 </html>
