--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,8 @@
 <body ng-app="webApp">
   <div ng-controller="AppController">
     <div class="container">
-      <h1>{{moo}}</h1>
+      <h1 class="hide-on-small-only">{{moo}}</h1>
+      <p class="hide-on-med-and-up">{{moo}}</p>
 
       <a ng-show="selectedChapterId" ng-click="setChapterId(0)" class="btn-floating btn-small red bb-btn-back"><i class="large mdi-hardware-keyboard-arrow-left"></i></a>
       <a ng-show="selectedBookId&&!selectedChapterId" ng-click="setBookId(0)" class="btn-floating btn-small red bb-btn-back"><i class="large mdi-hardware-keyboard-arrow-left"></i></a>
