--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,9 @@
 <body ng-app="webApp">
   <div ng-controller="AppController">
     <div class="container">
-      <h1 class="hide-on-small-only">{{moo}}</h1>
-      <p class="hide-on-med-and-up">{{moo}}</p>
+      <h1 class="hide-on-small-only">{{titleOne}}</h1>
+      <h2 class="hide-on-small-only grey-text">{{titleTwo}}</h2>
+      <p class="hide-on-med-and-up">{{titleOne}} <span class="grey-text">{{titleTwo}}</span></p>
 
       <div class="action-wrapper">
         <a ng-show="selectedChapterId" ng-click="setChapterId(0)" class="btn-floating btn-small red bb-btn-back"><i class="large mdi-hardware-keyboard-arrow-left"></i></a>
