--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script type="text/javascript" src="libs/taffydb/taffy.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
+  <script type="text/javascript" src="config.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body ng-app="webApp">
